# mcp-servers

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: server-tests.yaml
src/: main.rs
src/servers/: mod.rs
src/servers/arvix/: errors.rs  extract_paper_text.rs  get_paper_by_id.rs  list_records.rs  mod.rs  search_by_author.rs  search_papers.rs  server.rs
src/servers/arxiv/: README.md  errors.rs  extract_paper_text.rs  get_paper_by_id.rs  list_records.rs  mod.rs  search_by_author.rs  search_papers.rs  server.rs
src/servers/discord/: README.md  add_reaction.rs  assign_role.rs  errors.rs  get_channel_messages.rs  mod.rs  post_dm.rs  post_message.rs  post_webhook.rs  server.rs
src/servers/huggingface/: README.md  errors.rs  get_model_info.rs  get_model_sample_images.rs  get_readme.rs  mod.rs  search_models.rs  server.rs  whoami.rs
src/servers/replicate/: README.md  edit_image.rs  edit_image_with_mask.rs  errors.rs  generate_image.rs  get_model_info.rs  get_prediction.rs  list_models.rs  mod.rs  server.rs  whoami.rs
src/servers/shopify/: README.md  add_product_image.rs  create_order.rs  create_product.rs  delete_order.rs  delete_product.rs  errors.rs  get_order.rs  get_product.rs  get_sales_data.rs  list_customers.rs  list_products.rs  mod.rs  server.rs  update_product.rs
src/servers/twitter/: README.md  errors.rs  get_mentions.rs  get_timeline.rs  mod.rs  post_tweet.rs  reply_to_tweet.rs  search_tweets.rs  server.rs
