[package]
name = "arc-mcp-servers"
version = "0.1.0"
edition = "2024"

[features]
default = ["arvix"]
arvix = []
replicate = []

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
mcp-core = { version = "0.1.44", features = ["sse"] }
mcp-core-macros = "0.1.21"
reqwest = { version = "0.11", features = ["json"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
