[package]
name = "mcp-servers"
version = "0.1.0"
edition = "2024"

[features]
default = ["shopify", "huggingface", "replicate", "discord", "twitter", "arxiv"]
arxiv = []
twitter = ["twitter-v2"]
discord = ["serenity"]
shopify = []
huggingface = []
replicate = []

[dependencies]
twitter-v2 = { version = "0.1.8", optional = true }
serenity = { version = "0.12", features = [
    "framework",
    "gateway",
    "client",
    "http",
    "model",
], optional = true }
anyhow = "1.0.98"
async-trait = "0.1.77"
base64 = "0.21"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
mcp-core = { version = "0.1.46", features = ["sse"] }
mcp-core-macros = "0.1.22"
pdf-extract = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
url = "2.5.4"
